# libecs

./: CMakeLists.txt
cmake/: libecsConfig.cmake.in
include/libecs/: libecs.hpp
include/libecs/containers/: components.hpp  entity.hpp  registry.hpp  sparse_set.hpp  storage.hpp  view.hpp
include/libecs/utilities/: macros.hpp  types.hpp
